[metadata]
name = modist-client
package_name = modist
version = 0.0.1
description = The local client for managing Modist mods
url = https://github.com/modist-io/modist-client
author = Modist Team
author_email = admin@modist.io
long_description = file: README.md
long_description_content_type = text/x-markdown
license = ISC License
keywords =
    modist
    client
    mod
platforms = any
classifier =
    Development Status :: 2 - Pre-Alpha
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: ISC License (ISCL)
    Intended Audience :: Developers
    Operating System :: POSIX
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Natural Language :: English
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Bug Tracker = https://github.com/modist-io/modist-client/issues
    Documentation = https://modist-client.readthedocs.io
    Source Code = https://github.com/modist-io/modist-client

[options.extras_require]
test =
    isort
    flake8
    pytest==5.3.5  # NOTE: breaking changes were introduced in 5.4.x
    pytest-flake8
    pytest-sugar
    pytest-xdist
    pytest-cov
    hypothesis
    codacy-coverage
    coverage
    check-manifest
docs =
    sphinx

[options]
zip_safe = true
python_requires = >=3.6
setup_requires = setuptools>=36.2.2
install_requires =
    attrs
    python-rapidjson
    pydantic[email]

[bdist_wheel]
universal = 1

[tool:pytest]
plugins = cov flake8 xdist
addopts = -rxsX --flake8 -n 4 --cov
norecursedirs = .git _build dist news tasks docs
testpaths = tests
python_files = test_*.py
python_classes = Test*
python_functions = test_*
flake8-ignore =
    docs/source/* ALL
    tests/*.py ALL
    setup.py ALL

[flake8]
max-line-length = 88
ignore = D202,D203,F401,E123,W503,E203
exclude =
    .tox,
    .git,
    __pycache__,
    docs/source/*,
    build,
    dist,
    tests/*,
    *.pyc,
    *.egg-info,
    .cache,
    .eggs,
    setup.py,
max-complexity = 13
import-order-style = google
application-import-names = flake8

[pep257]
ignore = D202,D203

[isort]
atomic = true
not_skip = __init__.py
line_length = 88
indent = '    '
multi_line_output = 3
length_sort = 1
known_third_party = colorama,hypothesis,invoke,parver,pydantic,pytest,setuptools,towncrier
known_first_party = modist
include_trailing_comma = true

[mypy]
python_version = 3.7
ignore_missing_imports = true
follow_imports = skip
mypy_path = stubs

[pytype]
# NOTE: pytype currently doesn't support > 3.6 (2018-11-29)
python_version = 3.6
pythonpath =
    src/modist
inputs =
    src/modist
output = stubs
disable =
    pyi-error
exclude =
    **/*_test.py
    **/test_*.py
    tasks/*.py
report_errors = false

[coverage:run]
branch = True
parallel = True
disable_warnings = no-data-collected
source =
    src/modist/

[coverage:report]
show_missing = True
